# mcp-access-point

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  README_CN.md  RUNTIME_CONFIG_API.md  clippy.toml  config-test.yaml  config.yaml  docker-entrypoint.sh  openapi_for_demo_patch1.json  test-admin-api.sh
.github/workflows/: rust.yml
config/: openapi_for_demo.json  openapi_for_demo.yml  openapi_for_demo_patch2.json
demo/: README.md  README_CN.md  config.petstore.yaml  main.py
src/: cli.rs  jsonrpc.rs  lib.rs  main.rs  openapi.rs  sse_event.rs  types.rs  utils.rs
src/admin/: http_admin.rs  mod.rs  resource_manager.rs  resource_types.rs  resource_validator.rs  validate.rs
src/config/: control.rs  etcd.rs  mcp.rs  mod.rs  route.rs  upstream.rs  watcher.rs
src/config/watcher/: diff_apply.rs
src/discovery/: mod.rs
src/logging/: mod.rs
src/mcp/: initialize_handler.rs  method_dispatcher.rs  mod.rs  notifications.rs  ping_handler.rs  prompts.rs  request_builder.rs  resources.rs  response_sender.rs  result_builder.rs  sampling.rs  tool_call_handler.rs  tool_list_handler.rs  tools.rs
src/plugin/: mod.rs  prometheus.rs  proxy_rewrite.rs  redirect.rs  request_id.rs
src/proxy/: discovery.rs  event.rs  global_rule.rs  mcp.rs  mod.rs  route.rs  service.rs  ssl.rs  upstream.rs
src/service/: body.rs  body_handler.rs  constants.rs  encoding.rs  endpoint.rs  mcp.rs  mod.rs  openapi_admin.rs  request_handler.rs  response.rs  response_processor.rs  sse.rs
src/utils/: convert.rs  file.rs  mod.rs  request.rs
static/: admin_dashboard.html
