[package]
name = "mcp-access-point"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version = "4.5.35", features = ["derive"] }
bytes = "1.8.0"
serde = "1.0.219"
serde_json = "1.0.133"
async-trait="0.1.88"
pingora = { git="https://github.com/sxhxliang/pingora.git", branch = "request_body_processing", features = ["lb"] }
http = "1.3.1"
async-stream = "0.3.6"
futures = "0.3.31"
chrono = "0.4.40"
validator = { version = "0.20.0", features = ["derive"] }
matchit = "0.8.6"
url = "2"
regex = "1.11.1"
once_cell = "1.21.3"
arc-swap = "1.7.1"
dashmap = "6.1.0"
uuid = { version = "1.16.0", features = ["v4"] }
tokio = { version = "1.44.2", features = ["fs"] }
env_logger = { version = "0.11.8", features = ["unstable-kv"] }
log = { version = "0.4.22", features = ["kv"] }
notify = "8.0"

reqwest = { version = "0.12", features = ["json", "blocking"] }

[profile.release]
codegen-units = 1
lto = true
strip = "debuginfo"