[package]
name = "access-point"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version = "4.5.35", features = ["derive"] }
bytes = "1.8.0"
base64 = "0.22.1"
serde = "1.0.219"
serde_json = "1.0.133"
serde_yaml = "0.9.34"
serde-transcode = "1.1.1"
async-trait="0.1.88"

pingora = { version = "0.5", features = ["openssl", "sentry"] }
pingora-core = "0.5.0"
pingora-error = "0.5.0"
pingora-http = "0.5.0"
pingora-limits = "0.5.0"
pingora-load-balancing = "0.5.0"
pingora-proxy = "0.5.0"
pingora-runtime = "0.5.0"

hickory-resolver = "0.24.1"
http = "1.3.1"
ipnetwork = { version = "0.20.0", features = ["serde"] }
jsonwebtoken = "9.3.1"
async-stream = "0.3.6"
futures = "0.3.31"
chrono = "0.4.40"

validator = { version = "0.20.0", features = ["derive"] }
matchit = "0.8.6"
rand = "0.8"
url = "2"
regex = "1.11.1"
once_cell = "1.21.3"
arc-swap = "1.7.1"
dashmap = "6.1.0"
uuid = { version = "1.16.0", features = ["v4"] }
tokio = { version = "1.44.2", features = ["fs"] }

env_logger = { version = "0.11.8", features = ["unstable-kv"] }
log = { version = "0.4.22", features = ["kv"] }
notify = "8.0"
sentry = "0.36"
prometheus = "0.13.4"
etcd-client = "0.14.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }

[profile.release]
codegen-units = 1
lto = true
strip = "debuginfo"